# MMA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: .style.yapf  layer_norm.py  reduce_sum.py  vector_add.py
cmake/: glog.cmake  third_party.cmake
common/: common.h  lru_cache.h  timer.h
gemm/: CMakeLists.txt  cublas_gemm.cc  cublas_gemm.h  cublaslt_gemm.h  cutlass_gemm.cu  cutlass_gemm.h  gemm.cu  main.cc
ops/binary/: CMakeLists.txt  binary.cu  binary.h
ops/transpose/: transpose.cu
reduce/: CMakeLists.txt  Makefile  main.cc  reduce_sum.cu  reduce_sum.h  reduction  reduction.cc  reduction.h  reduction_kernel.cu
tests/: CMakeLists.txt  README.md  coalesc_test.cu  lru_test.cc  simple_cute_gemm_example.cu
tests/ops/: binary_test.cc
tools/: parse_ncu.py
